--- a/TP2 Labyrinthe/TP2 Labyrinthe.vcxproj
+++ b/TP2 Labyrinthe/TP2 Labyrinthe.vcxproj
@@ -78,6 +78,9 @@
   <ItemGroup>
     <ClCompile Include="ConsoleMenu.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ConsoleMenu.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
