--- a/TP2 Labyrinthe/TP2 Labyrinthe.vcxproj.filters
+++ b/TP2 Labyrinthe/TP2 Labyrinthe.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ConsoleMenu.h">
+      <Filter>Fichiers sources</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
