--- a/TP2 Labyrinthe/TP2 Labyrinthe.vcxproj
+++ b/TP2 Labyrinthe/TP2 Labyrinthe.vcxproj
@@ -80,11 +80,14 @@
     <ClCompile Include="Labyrinth.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Robot.cpp" />
-    <ClCompile Include="Square.cpp" />
+    <ClCompile Include="Square.h" />
     <ClCompile Include="Stack.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConsoleMenu.h" />
+    <ClInclude Include="Labyrinth.h" />
+    <ClInclude Include="Robot.h" />
+    <ClInclude Include="Stack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
