--- a/TP2 Labyrinthe/TP2 Labyrinthe.vcxproj
+++ b/TP2 Labyrinthe/TP2 Labyrinthe.vcxproj
@@ -89,6 +89,14 @@
     <ClInclude Include="Robot.h" />
     <ClInclude Include="Stack.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Ressources\exemple1.txt">
+      <FileType>Text</FileType>
+      <DeploymentContent>false</DeploymentContent>
+    </Text>
+    <Text Include="Ressources\exemple2.txt" />
+    <Text Include="Ressources\exemple3.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
